Removed code from homepage.js that was obsolete, added another script link, added classes to carousel descriptions to try and fix readability to the photo contrast, changed some font sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,3 +82,7 @@
     border: 0;
     color: black;
 }
+
+.tag {
+    color: rgb(255, 255, 255);
+}
